# psyz

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  requirements.txt
.github/workflows/: build.yaml
decomp/: .gitignore  LICENSE  Makefile  README.md  diff_settings.py  permuter_settings.toml  psyq-gen.sh  psyq.ld  psyq400.map.sha256  rm-o-dups-350.sh  rm-o-dups-400.sh  rm-o-dups-470.sh  splat400.yaml  splat470.yaml  symbols.400.bss.txt  symbols.400.txt  symbols.470.bss.txt  symbols.470.txt
decomp/include/: common.h  libapi.h  libc.h  libcard.h  libds.h  libgs.h  libgun.h  libmcrd.h  libsio.h  libtap.h  macro.inc  macro_c.inc
decomp/sdk/: .gitignore  Makefile  Psy-Q_47.zip.sha256  psyq400.tar.gz.sha256
decomp/src/libapi/: a07.c  a08.c  a09.c  a10.c  a11.c  a12.c  a13.c  a14.c  a15.c  a16.c  a18.c  a19.c  a20.c  a21.c  a22.c  a23.c  a24.c  a25.c  a32.c  a36.c  a37.c  a38.c  a39.c  a40.c  a41.c  a50.c  a51.c  a52.c  a53.c  a54.c  a55.c  a64.c  a65.c  a66.c  a67.c  a68.c  a69.c  a70.c  a71.c  a72.c  (+48 more)
decomp/src/libc2/: abs.c  atoi.c  bcmp.c  bcopy.c  bsearch.c  bzero.c  ctype.c  exit.c  getc.c  getchar.c  gets.c  itoa.c  lsearch.c  malloc.c  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  printf.c  prnt.c  putc.c  putchar.c  puts.c  qsort.c  rand.c  setjmp.c  sprintf.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strings.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strpbrk.c  strrchr.c  (+6 more)
decomp/src/libcard/: a74.c  a75.c  a76.c  a78.c  a79.c  a80.c  a88.c  a92.c  a93.c  c112.c  c171.c  c172.c  c173.c  card.c  end.c  format.c  init.c  patch.c
decomp/src/libcd/: bios.c  c_002.c  c_003.c  c_004.c  c_005.c  c_006.c  c_007.c  c_008.c  c_009.c  c_010.c  c_011.c  c_012.c  c_013.c  c_014.c  c_015.c  cdplay.c  cdread.c  cdread2.c  cdreade.c  cdrom.c  event.c  iso9660.c  sys.c  toc.c  type.c
decomp/src/libcomb/: comb.c
psyq_sdk/: .gitignore  Makefile
psyz/: CMakeLists.txt  Makefile  psx.mk
psyz/include/: common.h  kernel.h  libapi.h  libetc.h  libgpu.h  libgs.h  libgte.h  libpress.h  libsn.h  log.h  psyz.h  types.h
psyz/include/glad/: glad.h
psyz/psxgen/: .gitignore  Makefile  README.md  pcsx.json  psxgen.py  test.c
psyz/src/: draw.h
psyz/src/platform/: common.c  glad.c  log.c  plat_unix.c  plat_win.c  sdl2.c  sdl2_gl.c
psyz/src/psyq/: README.md
psyz/src/psyz/: libapi.c  libcard.c  libcd.c  libetc.c  libgpu.c  libgs.c  libgte.c  libpress.c  libsn.c  libsnd.c  libspu.c
psyz/src/psyz/libgpu/: ext.c  font.c
psyz/tests/: CMakeLists.txt  test_libapi.cpp  test_sdlgl.cpp
psyz/tests/expected/: .gitignore  optimize.sh
psyz/tests/res/: 4bpp.h
samples/: LICENSE  Makefile
samples/etc_card/: CMakeLists.txt  Makefile  card.c  cardio.h  hand1.h  hand2.h  hand3.h
samples/gpu_balls/: CMakeLists.txt  Makefile  balls.c  balltex.h
samples/gpu_hello/: CMakeLists.txt  hello.c
samples/gpu_shapes/: CMakeLists.txt  Makefile  shapes.c
samples/gpu_transp/: 16bpp.h  16bpp.tim  24bpp.h  24bpp.tim  4bpp.tim  8bpp.h  8bpp.tim  CMakeLists.txt  Makefile  make-img.sh  transp.c
samples/gs_cube/: CMakeLists.txt  Makefile  cube.c
samples/gs_hello/: Makefile  hello.c
(+954 files in other folders)
